2 cats + titles + clicker + clickability, but no counter action yet

--- a/index.html
+++ b/index.html
@@ -3,37 +3,25 @@
 <head>
 	<meta charset="UTF-8">
     <title>Cat Clicker</title>
-    <style>
+  <!--   // <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
+<!--     <style>
     	#cat {
     		width: 500px;
     		height: auto;
     	}
-    </style>
+    </style> -->
 </head>
 
 <body>
+    <script type="text/javascript" src="js/main.js"></script>
+<!--     <div id="main"></div> -->
 
-    <script type="text/javascript">
-
-    // var cats = ["Jeff the cat, Jimmy sharp paws"];
-
-    var clicks = 0;
-    function onClick() {
-        clicks += 1;
-        document.getElementById("clicks").innerHTML = clicks;
-    };
-
-    // var name = ;
-
-    // for (var i = 0; i < cats.length; i++) {
-    // 	document.getElementsByClassName("title").innerHTML = cats[i];
-    // };
-
-    </script>
-    
-   <!--  <h1 class="title"></h1> -->
+<!-- 	<div id ="cat1"></div>
+	<div id ="cat2"></div>	
+ -->
+    <!-- <h1 class="title"></h1>
     <input type="image" src="img/cat.jpg" onClick="onClick()" name="" class="" id="cat"/>
-    <p>Clicks: <a id="clicks">0</a></p>
+    <p>Clicks: <a id="clicks">0</a></p> -->
 
 
 </body>
