Everything displays correctly, but click / counter on cat image is not yet functioning

--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
 	<meta charset="UTF-8">
     <title>Cat Clicker</title>
   <!--   // <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
-<!--     <style>
-    	#cat {
-    		width: 500px;
-    		height: auto;
+    <style>
+    	ul {
+    		list-style: none;
     	}
-    </style> -->
+    </style>
 </head>
 
 <body>
