COde organised into MV* structure. All working correctly.

--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
 <head>
 	<meta charset="UTF-8">
     <title>Cat Clicker</title>
-  <!--   // <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
     <style>
     	ul {
     		list-style: none;
     	}
+        img {
+            width: 300px;
+        }
     </style>
 </head>
 
 <body>
+    <ul id="catList"></ul>
+    <div id="catDisplay">
+        <h2 id="catName"></h2>
+        <img id="catPic">
+        <p id="clickCount"></p>
+    </div>
+
     <script type="text/javascript" src="js/main.js"></script>
-<!--     <div id="main"></div> -->
-
-<!-- 	<div id ="cat1"></div>
-	<div id ="cat2"></div>	
- -->
-    <!-- <h1 class="title"></h1>
-    <input type="image" src="img/cat.jpg" onClick="onClick()" name="" class="" id="cat"/>
-    <p>Clicks: <a id="clicks">0</a></p> -->
-
 
 </body>
 </html>
