--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
         <img id="catPic">
         <p id="clickCount"></p>
     </div>
+    <button type="button">Admin</button>
+    <form>
+        Name: <input type="text" name="name" value="default"><br>
+        Picture: <input type="text" name="image" value="default"><br>
+        No of clicks: <input type="text" name="clicks" value="default"><br>
+        <input type="submit" value="Cancel">
+        <input type="submit" value="Submit">
+    </form>
 
     <script type="text/javascript" src="js/main.js"></script>
 
